[tool.poetry]
name = "GistSight"
version = "0.2.0"
description = "A client for gathering vulnerability-related information from GitHub Gists."
authors = ["Cédric Bonhomme <cedric.bonhomme@circl.lu>"]
license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://github.com/CIRCL/GistSight"
repository = "https://github.com/CIRCL/GistSight"

keywords = ["Vulnerability-Lookup", "Vulnerability", "CVE", "GitHub", "Gist"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

include = [
    "README.md",
    "COPYING",
    "gistsight/conf_sample.py",
]

[tool.poetry.scripts]
GistSight = "gistsight.publish:main"

[tool.poetry.dependencies]
python = "^3.10"
pyvulnerabilitylookup = "^2.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs|"

[tool.isort]
profile = "black"